Make this solution build and run
