# MyApi.Client/OpenAPIs/openapi.yaml
@@ -1,8 +1,8 @@
-x-generator: NSwag v14.0.3.0 (NJsonSchema v11.0.0.0 (Newtonsoft.Json v13.0.0.0))
+x-generator: NSwag v14.2.0.0 (NJsonSchema v11.1.0.0 (Newtonsoft.Json v13.0.0.0))
 openapi: 3.0.0
 info:
   title: MyApi
-  version: 1.0.0
+  version: v1
 servers:
   - url: http://localhost:5286
 paths:
@@ -49,6 +49,7 @@ paths:
     get:
       tags:
         - Persons
+      description: Gets persons
       operationId: Persons_GetPersons
       parameters:
         - name: page
@@ -75,6 +76,7 @@ paths:
     post:
       tags:
         - Persons
+      description: Create a person
       operationId: Persons_CreatePerson
       requestBody:
         x-name: request
@@ -85,6 +87,12 @@ paths:
         required: true
         x-position: 1
       responses:
+        200:
+          description: ""
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Person"
         201:
           description: ""
           content:
@@ -95,6 +103,7 @@ paths:
     get:
       tags:
         - Persons
+      description: Get a person by Id
       operationId: Persons_GetPersonById
       parameters:
         - name: id
@@ -116,6 +125,7 @@ paths:
     delete:
       tags:
         - Persons
+      description: Delete person
       operationId: Persons_DeletePerson
       parameters:
         - name: id
@@ -136,61 +146,61 @@ components:
       type: object
       additionalProperties: false
       properties:
-        Date:
+        date:
           type: string
           format: date
-        TemperatureC:
+        temperatureC:
           type: integer
           format: int32
-        Summary:
+        summary:
           type: string
           nullable: true
-        TemperatureF:
+        temperatureF:
           type: integer
           format: int32
     ItemsResultOfPerson:
       type: object
       additionalProperties: false
       properties:
-        Items:
+        items:
           type: array
           items:
             $ref: "#/components/schemas/Person"
-        Total:
+        total:
           type: integer
           format: int64
     Person:
       type: object
       additionalProperties: false
       properties:
-        Id:
+        id:
           type: integer
           format: int32
-        FirstName:
+        firstName:
           type: string
-        GivenName:
+        givenName:
           type: string
-        MiddleName:
+        middleName:
           type: string
           nullable: true
-        LastName:
+        lastName:
           type: string
-        DateOfBirth:
+        dateOfBirth:
           type: string
           format: date
     CreatePersonRequest:
       type: object
       additionalProperties: false
       properties:
-        FirstName:
+        firstName:
           type: string
-        GivenName:
+        givenName:
           type: string
-        MiddleName:
+        middleName:
           type: string
           nullable: true
-        LastName:
+        lastName:
           type: string
-        DateOfBirth:
+        dateOfBirth:
           type: string
           format: date
